change config language level